syntax = "proto3";

option go_package = ".;proto";

// protoc --go_out=plugins=grpc:. *.proto

package main;

message Nothing {
    bool dummy = 1;
}

message Event {
    int64  timestamp = 1;
    string method    = 2;
    string login     = 3;
    bool   success   = 4;
}

service Admin {
    rpc Logging (Nothing) returns (stream Event) {}
}

message ReqUserData {
    string login    = 1;
    string password = 2;
}

message RespUserData {
    string id       = 1;
    string login    = 2;
    bool   admin    = 3;
}

message Tokens {
    string access_token     = 1;
    string refresh_token    = 2;
    int64  access_expires   = 3;
}

message AccessToken {
    string access_token = 1;
}

message RefreshToken {
    string refresh_token = 1;
}

service Auth {
    rpc Register(ReqUserData) returns(Tokens) {}
    rpc Login(ReqUserData) returns(Tokens) {}
    rpc Info(AccessToken) returns(RespUserData) {}
    rpc RefreshTokens(RefreshToken) returns(Tokens) {}
}

